tests/fsharp/typecheck/sigs/neg_byref_4.bsl

neg_byref_4.fs(4,11,4,29): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_4.fs(4,11,4,29): typecheck error FS0426: A method return type would contain byrefs which is not permitted

neg_byref_4.fs(5,11,5,29): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_4.fs(5,11,5,29): typecheck error FS0426: A method return type would contain byrefs which is not permitted
